--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="dark">
   <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R39FXG3NW8"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-R39FXG3NW8');
-    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
@@ -21,6 +13,11 @@
 
     <link rel="canonical" href="https://csv.repair/" />
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="csv.repair" />
 
     <meta property="og:title" content="csv.repair - Fix Broken CSV Files Online Free" />
     <meta property="og:description" content="Free browser-based CSV repair tool. Fix malformed files, edit cells inline, run SQL queries, auto-repair errors, visualize data, and export clean CSV. No upload — 100% private." />
